--- a/farpi2/package.json
+++ b/farpi2/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^10.0.14",
     "bootstrap": "^4.5.2",
     "component": "^1.1.0",
+    "jquery": "^3.5.1",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
