--- a/marvin_ui2/angular.json
+++ b/marvin_ui2/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss",
-              "src/marvin_theme.sass"
+              "src/marvin_theme.sass",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ]
           },
           "configurations": {
