--- a/marvin_ui2/package.json
+++ b/marvin_ui2/package.json
@@ -30,13 +30,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.0.8",
-    "@angular/compiler-cli": "^10.0.14",
+    "@angular/cli": "^10.2.3",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.55",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
