--- a/marvin_ui2/package.json
+++ b/marvin_ui2/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^10.0.14",
     "@angular/platform-browser-dynamic": "^10.0.14",
     "@angular/router": "^10.0.14",
+    "angular-gauge": "^4.0.0",
     "bootstrap": "^4.5.2",
     "component": "^1.1.0",
     "jquery": "^3.5.1",
